--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8" />
-	<title>Karate profile</title>
+	<title>Spoke test</title>
 	<link rel="icon" href="img/favicon.png" />
 	<link rel="stylesheet" href="css/reset.css" />
 	
